white space fixed

--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,27 @@
 	font-family: 'Josefin Sans', sans-serif;
 	box-sizing: border-box;
 }
+
+html{
+	scroll-behavior: smooth;
+}
+
+html,body{
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+}
+
 .hero{
 	height: 100vh;
 	width: 100%;
 	background-image: url(../img/background.jpg);
 	background-size: cover;
 	background-position: center;
+	background-repeat: no-repeat;
+	
 }
 nav{
 	display: flex;
@@ -57,7 +72,7 @@ nav ul li a:hover{
 	transform: scale(1.2);
 }
 .content{
-	position: absolute;
+	position: relative; 
 	top: 50%;
 	left:8%;
 	transform: translateY(-50%);
@@ -302,3 +317,14 @@ footer p:nth-child(2){
 	bottom: 35px;
 	font-size: 14px; 
 }
+/*-----------------------------css for small screenn-----------------------*/
+
+
+/*@media only screen and (max-width: 600px){
+	
+	.hero{
+		background-image: url(/html-website-templates-master/portfolio/img/bg_mobile.jpg);
+
+	}
+} */
+
